# CC-1920

./: .gitignore  README.md
TP01/: Report.aux
TP01/Report/: Report.aux  Report.out  Report.tex  Report.toc
TP1/: README.md
TP1/Report/: Report.tex
TP2/: README.md
TP2/Report/: Report.tex  structure.tex
TP2/anonGW/: Cargo.toml
TP2/anonGW/src/: client.rs  main.rs  packet.rs  udp.rs
TP3/Report/: Report.tex
TP3/primario/: db.1-1-10.rev  db.2-2-10.rev  db.3-3-10.rev  db.4-4-10.rev  db.cc.pt  named.conf  named.conf.default-zones  named.conf.local  named.conf.options  zones.rfc1918
TP3/secundario/: named.conf  named.conf.local  named.conf.options
