[package]
name = "anon_gw"
version = "0.1.0"
authors = ["Hitler <a85504@alunos.uminho.pt>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
